kubernetes/app1-gw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-httproute
  namespace: app1
spec:
  parentRefs:
    - name: external-http
      namespace: gateway-system
  hostnames:
    - gw-cert.sabourau.lt
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: nginx-service
          port: 80
          weight: 100
